--- a/Server/lib/Web/views/l_kkutu.pug
+++ b/Server/lib/Web/views/l_kkutu.pug
@@ -67,7 +67,7 @@ block Jungle
 
 block Middle
 	- var VERSION = L('version');
-	- var nick = SESSION.profile ? (SESSION.profile.title || SESSION.profile.name) : null;
+	- var nick = SESSION.nickname;
 	div#Intro
 		img#intro(src='/img/kkutu/intro.png')
 		// img#intro-start(src='/img/kkutu/intro_start.gif')
