--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -57,7 +57,8 @@
 
 mixin Menu()
 	div.Menu
-		img(src='/img/kkutu/logo-ingame.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', alt="로고")
+		a(href="/")
+			img(src='/img/kkutu/logo-ingame.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', alt="로고")
 		- for(i in MENU)
 			- if(MENU[i].href)
 				button.menu-btn(id='menu-item-'+MENU[i].key, onclick='location.href = "'+MENU[i].href+'";')!= L(MENU[i].key)
@@ -85,6 +86,11 @@ mixin Menu()
 					span.my-stat-ping.aISub#accping
 					span.fuckSeogom= "핑"
 					//img.fuckHank#addBalance(src='/img/kkutu/currency/charge.svg')
+			div.accountItem
+				div.flex
+					img.fuckHank.my-rank-icon(src='/img/kkutu/currency/rp.png')
+					span.aISub.my-rank
+					span.fuckSeogom= "RP"
 			div.accountItem#signin(data-intro='Hello step one!')
 				div.flex
 					//img.my-stat-level
