--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -440,24 +440,24 @@ block Middle
 			strong Team Infole
 			br
 			strong DIRECTOR
-			p Hanseon
+			p 유한선
 
 			strong DEVELOPENT LEADER
-			p Doul
+			p 이도울 (이규빈)
 
 			strong WORD MANAGEMENT
-			p Yooddunddun
+			p 유뚠뚠
 
 			strong CLOSED BETA TEST
 			p Sqlare
-			p Kom Pasu
+			p 파수
 
 			strong ILLUST
-			p Drawing Pasu
+			p 파슈
 
 			strong MUSIC
 			p Xpolcore
-			p Yooddunddun
+			p 유뚠뚠
 
 			strong SPECIAL THANKS TO
 			p JJoriping (Original KKuTu)
