--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -58,7 +58,8 @@
 mixin Menu()
 	div.Menu
 		a(href="/")
-			img(src='/img/kkutu/logo-ingame.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', alt="로고")
+			img(src='/img/kkutu/logo-ingame.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="light", alt="로고")
+			img(src='/img/kkutu/logo-ingame-dark.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="dark", alt="로고")
 		- for(i in MENU)
 			- if(MENU[i].href)
 				button.menu-btn(id='menu-item-'+MENU[i].key, onclick='location.href = "'+MENU[i].href+'";')!= L(MENU[i].key)
@@ -77,9 +78,8 @@ mixin Menu()
 				//+GraphBar('my-gauge')
 			div.accountItem
 				div.flex
-					img.fuckHank(src='/img/kkutu/currency/win.png')
-					span.my-stat-record.aISub
-					span.fuckSeogom= "승"
+					img.fuckHank(src='/img/kkutu/currency/okg.png')
+					span.my-okg-text.aISub
 			div.accountItem
 				div.flex
 					img.fuckHank(src='/img/kkutu/currency/ping.png')
