--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -15,7 +15,7 @@
 }
 .hero{
 	background-size: cover;
-	background-image: url(https://imagestorage.pcor.me/images/2024/02/21/top.png);
+	background-image: url(/img/top.png);
 	background-repeat: no-repeat;
 }
 
