--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -58,8 +58,8 @@
 mixin Menu()
 	div.Menu
 		a(href="/")
-			img(src='/img/kkutu/logo-ingame.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="light", alt="로고")
-			img(src='/img/kkutu/logo-ingame-dark.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="dark", alt="로고")
+			img(src='/img/kkutu/logo-ingame-spring.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="light", alt="로고")
+			img(src='/img/kkutu/logo-ingame-spring-dark.svg', style='margin-left: 30px;margin-top: 12px;height: 2.7rem;', class="dark", alt="로고")
 		- for(i in MENU)
 			- if(MENU[i].href)
 				button.menu-btn(id='menu-item-'+MENU[i].key, onclick='location.href = "'+MENU[i].href+'";')!= L(MENU[i].key)
