--- a/neofront/static/css/in_kkutu.css
+++ b/neofront/static/css/in_kkutu.css
@@ -147,9 +147,13 @@
 		background-color: #1f2937!important;
 	}
 	#ChatBtn {
+		/*봄시즌 테마
 		background: #3b0764!important;
 		color: #a855f7!important;
-		border: 1px solid #581c87!important;
+		border: 1px solid #581c87!important;*/
+		border: none;
+		background: #e9b1cd;
+		color: #562135;
 	}
 	.rooms-item {
 		background-color: #111827!important;
@@ -333,8 +337,11 @@ equ{
 
 /* 토스트 메시지 */
 #tost_message {
+	/* 봄시즌 테마
 	border-left: 5px solid rgba(21,169,255,1);
-    background: linear-gradient(180deg, rgba(23,25,100,1) 0%, rgba(23,32,107,1) 100%);
+    background: linear-gradient(180deg, rgba(23,25,100,1) 0%, rgba(23,32,107,1) 100%);*/
+	border-left: 5px solid #c3829e;
+    background: #e9b1cd;
     width: 480px;
     z-index: 300;
     opacity: 0;
@@ -464,7 +471,9 @@ iframe{
 }*/
 #ReadyBtn:hover, #ReadyBtn.toggled {
     animation: none;
-    background: #2e1065;
+	/*봄시즌 테마
+    background: #2e1065;*/
+	background: #562135;
 }
 .product-body{ font-size: 16px; }
 .deltaScore{
@@ -619,10 +628,17 @@ iframe{
 #Community2Diag .dialog-head{
 	color: #ffffff!important;
 }
+
+/* 봄시즌 테마 
 	.primaryBtn{
 		font-weight: 700;
 		color: #fff!important;
 		background-color: #3A82F6!important;
+	}*/
+	.primaryBtn{
+		font-weight: 700;
+		color: #562135!important;
+		background-color: #e9b1cd!important;
 	}
 	.dialog .closeBtn{
 		float: right;
@@ -718,11 +734,15 @@ iframe{
 }
 .product-title{
 	font-weight: 700;
-    color: #6B7280;
+    /*봄시즌 테마
+	color: #6B7280;
     padding-left: 20px;
-    background-color: #ffffff;
+    background-color: #ffffff;*/
+	color: #562135;
+    padding-left: 20px;
+    background-color: #ffe7de;
 }
-.product-title i{ color: #6B7280; }
+.product-title i{ /*봄시즌 테마color: #6B7280;*/color: #562135; }
 .dialog-front{ z-index: 3; }
 #comm-friends div{ float: left; }
 	.cf-item{ margin: 2px 0px; width: 100%; }
@@ -914,15 +934,21 @@ iframe{
 		align-items: center;
 	}
 	#ExitBtn{
-		background: var(--Warning-Text, #EF4444);
+		/*봄시즌 테마
+		background: var(--Warning-Text, #EF4444);*/
+		background: #c3829e;
 		color: #fff;
 	}
 	#ReadyBtn{
-		background: #9333EA;
+		/*봄시즌 테마
+		background: #9333EA;*/
+		background: #e9b1cd;
 		color: #fff;
 	}
 	#StartBtn{
-		background: var(--Secondary, #3A82F6);
+		/*봄시즌 테마
+		background: var(--Secondary, #3A82F6);*/
+		background: #e9b1cd;
 		color: #fff;
 	}
 		.room-head-modified{ animation: ModifiedBlink 1s ease 3; }
@@ -1170,7 +1196,8 @@ iframe{
 		font-weight: bold;
 		text-align: center;
 		/* text-shadow: 30px 1px 5px #141414; */
-		background-image: url(/img/kkutu/lefthand.png);
+		/*봄시즌 테마 background-image: url(/img/kkutu/lefthand.png);*/
+		background-image: url('/img/kkutu/Mission(Spring).png');
 		background-size: cover;
 	}
 	.jjoriping{ width: 500px; }
@@ -1247,7 +1274,8 @@ iframe{
 				width: 100%;
 				position: absolute;
 				bottom: 0;
-				background-color: #223C6C;
+				/*봄시즌 테마background-color: #223C6C;*/
+				background-color: #562135;
 			}
 			.enterHere{
 				justify-content: center;
@@ -1256,8 +1284,9 @@ iframe{
 				width: 100%;
 				margin-top: 13px;
 			}
-			.jjo-turn-time .graph-bar{ background-color: #CA8A04; height: 100%; }
-			.jjo-round-time .graph-bar{ background-color: #3573E4; }
+			.jjo-turn-time .graph-bar{ /*봄시즌 테마 background-color: #CA8A04; */
+				background-color: #c3829e;height: 100%; }
+			.jjo-round-time .graph-bar{ /*봄시즌 테마 background-color: #3573E4;*/background-color: #e9b1cd; }
 				.round-extreme{ background-color: #FF6D6D !important; }
 			.cw .jjo-turn-time{ display: none; }
 			.cw .jjo-round-time{ width: 306px; }
@@ -1273,7 +1302,8 @@ iframe{
 		font-weight: bold;
 		text-align: center;
 		background-size: cover;
-		background-image: url(/img/kkutu/righthand.png);
+		/*봄시즌 테마background-image: url(/img/kkutu/righthand.png);*/
+		background-image: url('/img/kkutu/Chain(Spring).png');
 	}
 	.rounds{
 		margin-top: 64px;
@@ -1291,7 +1321,7 @@ iframe{
 		.rounds label{ margin: 0px 3px; }
 		.cw.rounds label{ cursor: pointer; }
 		.dg.rounds label{ cursor: default !important; }
-		.rounds-current{ color: #8B5CF6;
+		.rounds-current{ /*봄시즌 테마 color: #8B5CF6;*/ color: #c3829e;
 			font-size: 20px; }
 		.round-effect{ animation: RoundEffect 0.8s ease 1; }
 	.history-holder{
@@ -1677,8 +1707,13 @@ box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.10), 0px 4px 6px -4px rgba(0, 0, 
 #ChatBtn{
     border: 1px solid #D1D5DB!important;
     font-weight: 700;
+	
+	/* 봄시즌 테마
     background: #D8B4FE;
-    color: var(--Primary, #885CF6);
+    color: var(--Primary, #885CF6);*/
+
+    background: #e9b1cd;
+    color: #562135;
     float: left;
     border-left: none;
     margin-top: 5px;
