--- a/Server/lib/Web/views/portal.pug
+++ b/Server/lib/Web/views/portal.pug
@@ -1,51 +1,1 @@
-//-
-	Rule the words! KKuTu Online
-	Copyright (C) 2017 JJoriping(op@jjo.kr)
-
-	This program is free software: you can redistribute it and/or modify
-	it under the terms of the GNU General Public License as published by
-	the Free Software Foundation, either version 3 of the License, or
-	(at your option) any later version.
-
-	This program is distributed in the hope that it will be useful,
-	but WITHOUT ANY WARRANTY; without even the implied warranty of
-	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-	GNU General Public License for more details.
-
-	You should have received a copy of the GNU General Public License
-	along with this program. If not, see <http://www.gnu.org/licenses/>.
-extends layout
-
-block Subject
-	title= L('title')
-
-block CSS
-	link(rel='stylesheet', href='/css/in_game_kkutu.css')
-
-block Jungle
-	div(style='float: left; width: calc(100% - 4px); overflow-y: hidden; overflow-x: hidden;')
-		iframe#kkutu-bulletin(width='100%', height='500px', src='/kkutu_bulletin.html', style='margin: 0px;')
-		
-block Middle
-	div(style='float: left; width: 100%; margin-top: 35px; ')
-		div(style='float: left; padding-left: 70px;')
-			img#logo(src='/img/kkutu/placeholder.png', width="200px", height="100px")
-		div.jjoriping(style='margin-top: 40px;')
-			img.jjoObj.jjoEyeL(src='/img/jjoeyeL.png', style='left: -270px;')
-			img.jjoObj.jjoNose(src='/img/jjonose.png', style='left: -170px;')
-			img.jjoObj.jjoEyeR(src='/img/jjoeyeR.png', style='left: -70px;')
-			div.jjoDisplayBar(style='width: 325px; height: 85px;')
-				button#game-start.jjo-display= L('gameStart')
-	div(style='float: right; margin-top: -120px; width: 50%;')
-		div.server-list-box
-			h3.server-list-title
-				a#server-refresh
-					+FA('refresh')
-					+Expl(L('serverRefresh'))
-				label= L('serverList')
-				label#server-total(style='color: #AAA; font-size: 13px;')
-			div#server-list
-
-	+separator(10)
-
-block Bottom
+p 서버가 지정되어 있지 않습니다.
