라이센스 관련 사항 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -430,7 +430,8 @@ block Middle
 		iframe#community2(width=1280, height=700)
 	+Dialog('LicenseDiag', 645, 200, "오픈소스 라이선스 / 이용 약관")
 		h4.opt(style='text-align: center;')!= L('dictionarySupport')
-		h4.opt(style='text-align: center;')!= "게임 이용약관 및 개인정보 처리방침은 우상단 고객센터 탭에서 확인 가능합니다. 이 창을 닫을 시 이에 동의하는 것으로 간주합니다. (설정 내 저작권정보 보지 않기로 비활성화 가능)"
+		h4.opt(style='text-align: center;')!= "플러스끄투는 끄투리오(KKuTuIO)의 KKuTu-Game 프로젝트를 기반으로 하고 있습니다."
+		h4.opt(style='text-align: center;')!= "게임 이용약관 및 개인정보 처리방침은 우상단 고객센터 탭에서 확인 가능합니다. 이 창을 닫을 시 이에 동의하는 것으로 간주합니다."
 		h4.opt(style='text-align: center;')!= L('GPL')
 		+SettingOption('copyright-hide', "동의합니다")
 	+Dialog('NotificationDiag', 700, 180, "플러스끄투 안내")
