보상 관련 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -449,9 +449,11 @@ block Middle
 			img(src="/img/event/comingsoon.png")
 		div#event-content(style="display:none;background: #fff;")
 			img(src="/img/event/gift상단.png")
+			img(src="/img/event/gift보산.png")
+			img(src="/img/event/gift산정기준.png")
 			img(src="/img/event/current-level.png")
 			div(style="font-size: 40px;font-weight:bold; text-align: center;color: #000;background-color: #fff;")
-				p#userLevel(style="margin:0px") 300 Lv.
+				p#userLevel(style="margin:0px") PLATINUM
 			img#lockedItem(src="/img/event/acryll-lock.png")
 
 	+Dialog('CreditDiag', 390, 600, "제작진")
