테스트 모드 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -181,6 +181,8 @@ block Middle
 					option(value=12)= L('modeKSS')
 					option(value=4)= L('modeCSQ')
 					option(value=9)= L('modeHUN')
+				optgroup(label="테스트 모드")
+					option(value=14)= L('modeKJH')
 				optgroup(label="XP 2배 이벤트 중")
 					option(value=6)= L('modeKTY')
 				optgroup(label=L('mcEnglish'))
