--- a/neofront/src/routes/styles.css
+++ b/neofront/src/routes/styles.css
@@ -17,6 +17,10 @@
 	background-size: cover;
 	background-image: url(/img/top.png);
 	background-repeat: no-repeat;
+	height: 90vh;
+	display: flex;
+	justify-content: center; /* 가로 중앙 정렬 */
+	align-items: center;
 }
 
 .gs{
