후원버튼 및 점검안내 추가

--- a/Server/lib/Web/views/help.pug
+++ b/Server/lib/Web/views/help.pug
@@ -89,7 +89,7 @@ block Middle
 		div.page-body#intro(style='display: block;')
 			center
 				+Img('intro')
-				h3 두근두근 플러스끄투에 오신 것을 환영합니다.
+				h3 플러스끄투에 오신 것을 환영합니다.
 				h4 끄투에 대한 궁금한 점을 왼쪽 목차에서 골라 풀어 보세요.
 		div.page-body#box-c1
 			iframe(width=355, height=210, src="https://www.youtube.com/embed/5H_tp1i10S4", frameborder=0, allowfullscreen)
