밤양갱 아이템 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -479,9 +479,6 @@ block Middle
 			strong DEVELOPENT LEADER
 			p 이도울 (이규빈)
 
-			strong WORD MANAGEMENT
-			p 유뚠뚠
-
 			strong CLOSED BETA TEST
 			p Sqlare
 			p 파수
@@ -492,6 +489,7 @@ block Middle
 			strong MUSIC
 			p Xpolcore
 			p 유뚠뚠
+			p Roman Rajczyk
 
 			strong SPECIAL THANKS TO
 			p JJoriping (Original KKuTu)
